# nbgrader_exchange

./: .gitignore  .prettierignore  Makefile  README.md  RELEASE.md  install.json  package.json  pyproject.toml  requirements-dev.txt
.github/workflows/: build.yml  check-release.yml
cscienv_nbgrader_exchange/: __init__.py  collect.py  handlers.py  submit.py
jupyter-config/nb-config/: cscienv_nbgrader_exchange.json
jupyter-config/server-config/: cscienv_nbgrader_exchange.json
src/: handler.ts  index.ts
