[build-system]
requires = ["hatchling>=1.4.0"]
build-backend = "hatchling.build"

[project]
name = "cscienv_nbgrader_exchange"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 3",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "jupyter_server>=1.21,<3",
    "nbgrader==0.8.3"
]
authors = [{ name = "Jaime Barillas", email = "jaime.barillas@ontariotechu.net" }]
#dynamic = ["version"]
version = "1.0.0"

[tool.hatch.build.targets.sdist]
exclude = [".github", "binder", "dev", "requirements-dev.in", "requirements-dev.txt"]

[tool.hatch.build.targets.wheel.shared-data]
"jupyter-config/server-config" = "etc/jupyter/jupyter_server_config.d"

[tool.hatch.build.hooks.version]
path = "cscienv_nbgrader_exchange/_version.py"

[tool.check-wheel-contents]
ignore = ["W002"]
